# Bitcoin-analysis

./: .gitignore  AGENTS.md  DEPLOYMENT_CHECKLIST.md  ISSUES_REPORT.md  ISSUES_TO_CREATE.md  README.md  VERCEL_SETUP.md  check-all  check-all.bat  databricks.yml  main.py  pyproject.toml  requirements.txt  vercel.json
.agents/workflows/: new_feature__raw_ingest_api.md
.github/workflows/: ci.yml  daily_schema_check.yml  deploy-prod.yml  weekly_dbt_docs.yml
app/: README.md  build_output.txt  ci_failure_logs.txt  component_test_output.txt  debug-db.js  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  playwright-verify.js  test_detail.txt  test_output.txt  test_output_api.txt  test_output_db.txt  test_output_db_2.txt  test_output_mc.txt  test_output_mc_2.txt  vercel.json
app/scripts/: run-with-catalog.js
app/src/__tests__/: DateRangePicker.test.tsx  MetricsCard.test.tsx  bitcoin-data-server-all-filter.test.ts  bitcoin-data-server.test.ts  databricks.test.ts  forecast-implementation.test.ts  indicators.test.ts  module-resolution.test.ts  performance_benchmark.test.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/dashboard/: error.tsx  loading.tsx  page.tsx
app/src/app/login/: page.tsx
app/src/app/signup/: page.tsx
app/src/components/: AuthPreviewChart.tsx  EnergyBeam.tsx  MetricsCard.tsx  PriceChart.tsx  VolatilityChart.tsx
app/src/components/dashboard/: DashboardClient.tsx  DashboardHeader.tsx  DashboardSidebar.tsx  DatePicker.tsx  EnvironmentBadge.tsx  IndicatorSelector.tsx  StatsPanel.tsx  index.ts
app/src/components/landing/: EnergyBeam.tsx  EnergyGraph.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx
app/src/lib/: bitcoin-api.ts  bitcoin-data-server.ts  databricks.ts  env.ts  forecast-utils.ts  format-utils.ts  schemas.ts
app/src/scripts/: debug-server-logic.ts  test-databricks-connection.ts
app/src/theme/: colors.json  index.ts  spacing.json  typography.json
app/src/theme/__tests__/: theme.test.ts
data/: bitcoin_full_100_day.csv
dbt_silver_gold/: .gitignore  .user.yml  README.md  dbt_project.yml  pyproject.toml
dbt_silver_gold/analyses/: build_gold.sql  build_silver.sql  explore.sql  explore_result.sql  explore_source.sql  rsi_build.sql
dbt_silver_gold/macros/: check_ema_continuity.sql  create_update_obt_fact_day_crypto.sql  generate_schema.sql  last_value_not_null.sql  rsi.sql
dbt_silver_gold/macros/ema/: ema.sql  ema_status.sql
dbt_silver_gold/macros/gold/: create_update_agg_crypto.sql  schema.yml
dbt_silver_gold/macros/rsi/: previous_price_change.sql  rsi.sql
dbt_silver_gold/macros/silver/: create_update_obt_fact_day_crypto.sql  schema.yml
dbt_silver_gold/macros/tests/: percentage_range.sql
dbt_silver_gold/models/gold/crypto_prices/: agg_month_btc.sql  agg_week_btc.sql  (+4 more)
dbt_silver_gold/models/silver/: obt_fact_day_btc.sql  obt_fact_day_eth.sql
dbt_silver_gold/models/sources/: bronze.yml  silver.yml
dbt_silver_gold/scripts/: generate_docs.py
dbx_raw_ingest/: README.md  databricks.yml  pyproject.toml  requirements.txt
dbx_raw_ingest/resources/: dbx_raw_ingest_etl.pipeline.yml  raw_ingest_job.yml  sample_job.job.yml
dbx_raw_ingest/src/: sample_notebook.ipynb
dbx_raw_ingest/src/dbx_raw_ingest/: main.py
dbx_raw_ingest/src/dbx_raw_ingest_etl/: README.md
dbx_raw_ingest/src/dbx_raw_ingest_etl/transformations/: sample_trips_dbx_raw_ingest.py  sample_zones_dbx_raw_ingest.py
dbx_raw_ingest/src/raw_ingest/: CoinbaseFetcher.py  DbWriter.py  logger.py  main.py
dbx_raw_ingest/tests/: sample_taxis_test.py
dbx_workflow/: .gitignore  README.md  databricks.yml  pyproject.toml  run_h.txt  validate_out.json
dbx_workflow/resources/: master_orchestrator_job.yml  orchestrator_job.yml
dbx_workflow/scripts/: check_api_schemas.py
dbx_workflow/src/raw_ingest/: BGeometricsFetcher.py  BaseFetcher.py  CoinbaseFetcher.py  DbWriter.py  FrankfurterFetcher.py  SwapiFetcher.py  __init__.py  ingest_market_price_data.py  ingest_swapi_characters.py  ingest_technical_indicators.py  logger.py  main.py
dbx_workflow/src/raw_ingest/api_models/: README.md  bgeometrics.py  coinbase.py  frankfurter.py  swapi.py
dbx_workflow/tests/: conftest.py  test_bgeometrics_fetcher.py  test_coinbase_fetcher.py  test_db_writer.py  test_frankfurter_fetcher.py  test_ingest_market_price_data.py  test_ingest_swapi.py  test_ingest_technical_indicators.py  test_logger.py  test_main.py  test_swapi_fetcher.py
docs/plans/: 2026-03-09-technical-indicators-design.md
example_response_api_data/: response.json  technical-indicators.csv
src/: fetcher.py
src/data/: bitcoin_full_100_day.csv
test/: test_CoinbaseFetcher.py
test/data/: bitcoin_full_100_day.csv
(+14 files in other folders)
